test/fail/generated/test_BatchNorm1d_affine_eval/test_data_set_0/input_0.pb

J \w?Šd@Éµ¿k\"?ri¾â?Ÿ…»?”<â>ý^¾¾y£¿4z¢>ÆY%?ûÛ>¿ÃR?áÊ@‚¥?E°È¿¸Ôÿ?qž¾n	:?é=–Õn¿‡­=tdñ¿Ê®ó½‘ý”½hãL?&ˆ¿!6?-¯]?±?Q?’³¿?Ÿzº9?|­2?›?Ÿã¾åÇ>]A}¿@é ?